--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,12 +33,16 @@ body {
   cursor: pointer;
 }
 
-
 @media (min-width: 320px) and (max-width: 480px) {
   .avatat-img {
     height: initial;
   }
-  
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .avatat-img {
+    height: initial;
+  }
 }
 
 .social-icons {
